# ms-teams-zoho-desk-notifications-service

./: .dockerignore  .gitignore  Dockerfile.dashboard  Dockerfile.notification  README.md  docker-compose.yml  entrypoint.sh  imp.txt  main.py  notes.txt  plan.md  pyproject.toml  tmp_payload_view.txt
.github/workflows/: ci.yml  deploy-ssh.yml
config/: products.json  products.json.example
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml  secrets.toml.example
dashboard/pages/: 1_products.py  2_active_tickets.py
dashboard/utils/: auth.py  docker_ops.py  zoho_client.py
docs/: deployment-and-architecture.md
scripts/: create_test_tickets.py  migrate_to_json.py  render_diagrams.py
src/: __init__.py
src/automatic report generation/: Questions to be asked to new view administration..txt  generate_radiologist_productivity_reports.py
src/core/: __init__.py  a.json  b.json  config_manager.py  logger.py  sent_amendments_notifications.json  sent_consults_and_physician_connection_notifications.json  sent_general_notifications.json  sent_it_system_studies_notifications.json  sent_nm_studies_notifications.json  sent_password_reset_notifications.json  test_teams_webhook.py  watch_helper.py  zoho_search_raw_payload.txt
src/schema/: __init__.py  zoho_api_schemas.py
src/scripts/: __init__.py  amendments_watch.py  code_stroke_watch.py  critical_findings_watch.py  it_system_studies_watch.py  nm_studies_watch.py  pending_watch.py  product_registry.py  superstat_watch.py
src/superstat_cron/: .gitignore  __init__.py  temp.py  (+20 more)
tests/: conftest.py
(+23 files in other folders)
