[project]
name = "41-pacs-pros-automations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.1.4",
    "dotenv>=0.9.9",
    "filelock>=3.25.2",
    "jupyter>=1.1.1",
    "pydantic>=2,<3",
    "pytz>=2025.2",
    "requests>=2.32.5",
]
